# realworld-fastapi

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  lgtm.env
alembic/: env.py
alembic/versions/: 2025-07-20_add_articles_and_comments_tables.py  2025-07-20_add_profile_fields_and_user_follows.py  2025-07-20_add_tags_table.py  2025-07-20_auth_and_users.py  2025-07-20_create_tags_table.py
src/: __init__.py  config.py  database.py  main.py
src/articles/: __init__.py  models.py  router.py  schemas.py  service.py
src/auth/: __init__.py  backend.py  dependencies.py  manager.py  router.py  schemas.py
src/comments/: __init__.py  models.py  router.py  schemas.py  service.py
src/posts/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
src/profiles/: __init__.py  models.py  router.py  schemas.py  service.py
src/tags/: __init__.py  models.py  router.py  schemas.py  service.py
src/users/: __init__.py  manager.py  models.py  router.py
tests/: conftest.py  test_articles.py  test_main.py  test_profiles.py  test_tags.py  test_tags_simple.py
