[tool.poetry]
name = "realworld-fastapi"
version = "0.1.0"
description = "A FastAPI project following best practices."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
pydantic = "*"
python-dotenv = "*"
sqlalchemy = "*"
alembic = "*"
httpx = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
