[tool.poetry]
name = "realworld-fastapi"
version = "0.1.0"
description = "A FastAPI project following best practices."
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
pydantic = "*"
python-dotenv = "*"
sqlalchemy = "*"
alembic = "*"
httpx = "*"
scalar-fastapi = "^1.2.2"
pydantic-settings = "^2.10.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
python-multipart = "^0.0.20"
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"
opentelemetry-distro = "^0.56b0"
opentelemetry-exporter-otlp = "^1.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

